[package]
name = "once_cell"
version = "1.17.1"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

description = "Single assignment cells and lazy values."
readme = "README.md"
documentation = "https://docs.rs/once_cell"

repository = "https://github.com/matklad/once_cell"
keywords = ["lazy", "static"]
categories = ["rust-patterns", "memory-management"]

exclude = ["*.png", "*.svg", "/Cargo.lock.msrv", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
# These optional dependencies are considered private impl details,
# only features from `[features]` table are a part of semver-guarded API.
atomic-wait = { version = "1", optional = true }

[dev-dependencies]
lazy_static = "1.0.0"
crossbeam-utils = "0.8.7"
regex = "1.2.0"

[features]
default = ["std", "sync"]

# Enables `once_cell::sync` module.
std = ["alloc", "atomic-wait"]

# Enables `once_cell::race::OnceBox` type.
alloc = ["race"]

spin = []

sync = []

# Enables `once_cell::race` module.
race = []

# Enables semver-exempt APIs of this crate.
# At the moment, this feature is unused.
unstable = []

[[example]]
name = "bench"
required-features = ["std"]

[[example]]
name = "bench_acquire"
required-features = ["std"]

[[example]]
name = "bench_vs_lazy_static"
required-features = ["std"]

[[example]]
name = "lazy_static"
required-features = ["std"]

[[example]]
name = "reentrant_init_deadlocks"
required-features = ["std"]

[[example]]
name = "regex"
required-features = ["std"]

[[example]]
name = "test_synchronization"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
